--- a/index.html
+++ b/index.html
@@ -250,7 +250,9 @@
             <hr>
             <h2 class="text-2xl font-medium mt-4">Total price: <span class="text-[#11111180]">00</span> <span class="text-[#11111180]">TK</span> </h2>
             <h2 class="text-2xl font-medium mt-4">Discount: <span class="text-[#11111180]">00</span> <span class="text-[#11111180]">TK</span> </h2>
-            <h2 class="text-2xl font-medium mt-4">Total: <span class="text-[#11111180]">00</span> <span class="text-[#11111180]">TK</span> </h2>
+            <h2 class="text-2xl font-medium mt-4 mb-4">Total: <span class="text-[#11111180]">00</span> <span class="text-[#11111180]">TK</span> </h2>
+
+            <hr>
 
             <button class="btn btn-secondary mt-4 ml-8  text-xl font-semibold">
               Make Purchase
