--- a/index.html
+++ b/index.html
@@ -50,15 +50,19 @@
 
     <main class="border-2 bg-[#F8F8F8]">
       <!-- Main container  -->
-      <div class=" flex flex-col gap-4 lg:flex-row w-[80%] mx-auto mt-32">
+      <div class="flex flex-col gap-4 lg:flex-row w-[80%] mx-auto mt-32">
         <!-- Card section  -->
-        <div class="flex-1 ">
+        <div class="flex-1">
           <!-- Kitchenware section  -->
           <div class="mb-6">
-            <h2 class="text-4xl font-semibold  pb-10">Kitchenware</h2>
+            <h2 class="text-4xl font-semibold pb-10">Kitchenware</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
               <!-- First card  -->
-              <div class="card w-72 bg-base-100 shadow-xl" id="card1" onclick="cardClick(this)">
+              <div
+                class="card w-72 bg-base-100 shadow-xl"
+                id="card1"
+                onclick="cardClick(this)"
+              >
                 <div
                   class="bg-[#1111110D] w-[90%] mx-auto mt-5 pb-8 rounded-md"
                 >
@@ -81,12 +85,17 @@
                   <h2 class="card-title text-xl font-semibold">
                     K. Accessories
                   </h2>
-                  <p class="text-[#11111180] font-normal text-xl"> <span>39.00</span> TK</p>
+                  <p class="text-[#11111180] font-normal text-xl">
+                    <span>39.00</span> TK
+                  </p>
                 </div>
               </div>
 
               <!-- 2nd card  -->
-              <div class="card w-72 bg-base-100 shadow-xl" onclick="cardClick(this)">
+              <div
+                class="card w-72 bg-base-100 shadow-xl"
+                onclick="cardClick(this)"
+              >
                 <div
                   class="bg-[#1111110D] w-[90%] mx-auto mt-5 pb-8 rounded-md"
                 >
@@ -109,12 +118,17 @@
                   <h2 class="card-title text-xl font-semibold">
                     K. Accessories
                   </h2>
-                  <p class="text-[#11111180] font-normal text-xl"> <span>25.00</span> TK</p>
+                  <p class="text-[#11111180] font-normal text-xl">
+                    <span>25.00</span> TK
+                  </p>
                 </div>
               </div>
 
               <!-- 3rd card  -->
-              <div class="card w-72 bg-base-100 shadow-xl" onclick="cardClick(this)">
+              <div
+                class="card w-72 bg-base-100 shadow-xl"
+                onclick="cardClick(this)"
+              >
                 <div
                   class="bg-[#1111110D] w-[90%] mx-auto mt-5 pb-8 rounded-md"
                 >
@@ -134,10 +148,10 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-regular fa-star"></i>
                   </div>
-                  <h2 class="card-title text-xl font-semibold">
-                    Home Cooker
-                  </h2>
-                  <p class="text-[#11111180] font-normal text-xl"> <span>49.00</span> TK</p>
+                  <h2 class="card-title text-xl font-semibold">Home Cooker</h2>
+                  <p class="text-[#11111180] font-normal text-xl">
+                    <span>49.00</span> TK
+                  </p>
                 </div>
               </div>
             </div>
@@ -148,7 +162,10 @@
             <h2 class="text-4xl font-semibold pt-32 pb-10">Sportswear</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
               <!-- 4th card  -->
-              <div class="card w-72 bg-base-100 shadow-xl" onclick="cardClick(this)">
+              <div
+                class="card w-72 bg-base-100 shadow-xl"
+                onclick="cardClick(this)"
+              >
                 <div
                   class="bg-[#1111110D] w-[90%] mx-auto mt-5 pb-8 rounded-md"
                 >
@@ -171,12 +188,17 @@
                   <h2 class="card-title text-xl font-semibold">
                     Sports Back Cap
                   </h2>
-                  <p class="text-[#11111180] font-normal text-xl"> <span>49.00</span> TK</p>
+                  <p class="text-[#11111180] font-normal text-xl">
+                    <span>49.00</span> TK
+                  </p>
                 </div>
               </div>
 
               <!-- 5th card  -->
-              <div class="card w-72 bg-base-100 shadow-xl" onclick="cardClick(this)">
+              <div
+                class="card w-72 bg-base-100 shadow-xl"
+                onclick="cardClick(this)"
+              >
                 <div
                   class="bg-[#1111110D] w-[90%] mx-auto mt-5 pb-8 rounded-md"
                 >
@@ -199,12 +221,17 @@
                   <h2 class="card-title text-xl font-semibold">
                     Full Jersey Set
                   </h2>
-                  <p class="text-[#11111180] font-normal text-xl"> <span>69.00</span> TK</p>
+                  <p class="text-[#11111180] font-normal text-xl">
+                    <span>69.00</span> TK
+                  </p>
                 </div>
               </div>
 
               <!-- 6th card  -->
-              <div class="card w-72 bg-base-100 shadow-xl" onclick="cardClick(this)">
+              <div
+                class="card w-72 bg-base-100 shadow-xl"
+                onclick="cardClick(this)"
+              >
                 <div
                   class="bg-[#1111110D] w-[90%] mx-auto mt-5 pb-8 rounded-md"
                 >
@@ -224,10 +251,10 @@
                     <i class="fa-regular fa-star"></i>
                     <i class="fa-regular fa-star"></i>
                   </div>
-                  <h2 class="card-title text-xl font-semibold">
-                    Sports cates
-                  </h2>
-                  <p class="text-[#11111180] font-normal text-xl"> <span>159.00</span> TK</p>
+                  <h2 class="card-title text-xl font-semibold">Sports cates</h2>
+                  <p class="text-[#11111180] font-normal text-xl">
+                    <span>159.00</span> TK
+                  </p>
                 </div>
               </div>
             </div>
@@ -235,35 +262,79 @@
         </div>
 
         <!-- Purchase section  -->
-        <div class=" md:w-[80%] lg:w-[342px] md:pl-32 lg:pl-0 mt-20">
+        <div class="md:w-[80%] lg:w-[342px] md:pl-32 lg:pl-0 mt-20">
           <div class="bg-white p-6 rounded-md">
             <h2 class="text-2xl font-medium mb-4">Have coupon?</h2>
             <div class="flex">
-              <input id="input-code" class="text-[#11111180] border-2 border-grey-[#11111180] rounded-md rounded-r-none text-center" type="text" name="" id="" placeholder="Coupon code">
-              <button id="apply-btn" class="btn btn-secondary w-[100px] rounded-l-none text-xl font-semibold" disabled>
+              <input
+                id="input-code"
+                class="text-[#11111180] border-2 border-grey-[#11111180] rounded-md rounded-r-none pl-4"
+                type="text"
+                name=""
+                id=""
+                placeholder="Coupon code"
+              />
+              <button
+                id="apply-btn"
+                class="btn btn-secondary w-[100px] rounded-l-none text-xl font-semibold"
+                disabled
+              >
                 Apply
               </button>
             </div>
           </div>
 
-          <div class="bg-white p-6 rounded-md my-4 ">
-            <div class="mb-4" id="item-list">
+          <div id="list" class="bg-white p-6 rounded-md my-4">
+            <div class="mb-4" id="item-list"></div>
+            <hr />
+            <h2 class="text-2xl font-medium mt-4">
+              Total price:
+              <span class="text-[#11111180]" id="total-price">00</span>
+              <span class="text-[#11111180]">TK</span>
+            </h2>
+            <h2 class="text-2xl font-medium mt-4">
+              Discount: <span id="dis" class="text-[#11111180]">00</span>
+              <span class="text-[#11111180]">TK</span>
+            </h2>
+            <h2 class="text-2xl font-medium mt-4 mb-4">
+              Total: <span id="final-total" class="text-[#11111180]">00</span>
+              <span class="text-[#11111180]">TK</span>
+            </h2>
 
-            </div>
-            <hr>
-            <h2 class="text-2xl font-medium mt-4">Total price: 
-              <span class="text-[#11111180]" id="total-price">00</span> <span class="text-[#11111180]">TK</span> </h2>
-            <h2 class="text-2xl font-medium mt-4">Discount: 
-              <span class="text-[#11111180]">00</span> <span class="text-[#11111180]">TK</span> </h2>
-            <h2 class="text-2xl font-medium mt-4 mb-4">Total: <span class="text-[#11111180]">00</span> <span class="text-[#11111180]">TK</span> </h2>
+            <hr />
 
-            <hr>
-
-            <button id="purchase-btn" class="btn btn-secondary mt-4 ml-8  text-xl font-semibold" disabled>
+            <button onclick="my_modal_1.showModal()" 
+              id="purchase-btn"
+              class="btn btn-secondary mt-4 ml-8 text-xl font-semibold"
+              disabled
+            >
               Make Purchase
             </button>
-          </div>
 
+            <!-- modal section  -->
+            <!-- Open the modal using ID.showModal() method -->
+            <dialog id="my_modal_1" class="modal ">
+              <form method="dialog" class="modal-box text-center">
+                <img class="ml-20 md:ml-36" src="./images/congo.png" alt="">
+                <h1 class="font-bold text-4xl">Congratulations</h1>
+                <p class="py-4 text-[#11111180] font-normal text-base">
+                  Your Purchase the product
+                </p>
+                <div class="modal-action flex justify-center">
+                  <!-- if there is a button in form, it will close the modal -->
+                <button
+                onclick="goHome()" 
+                class="btn btn-secondary  text-xl font-semibold"
+                
+              >
+              Go Home
+              </button>
+                </div>
+              </form>
+            </dialog>
+
+
+          </div>
         </div>
       </div>
     </main>
